[package]
name = "ttfb"
description = """
Library + CLI-Tool to measure the TTFB (time to first byte) of HTTP(S) requests.
Additionally, this crate measures the times of DNS lookup, TCP connect, and
TLS handshake.
"""
version = "1.6.0"
edition = "2021"
keywords = ["ttfb", "http", "timings", "web"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/ttfb"
repository = "https://github.com/phip1611/ttfb"
documentation = "https://docs.rs/ttfb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ttfb"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
derive_more = { version = "0.99", default-features = false, features = ["display"] }

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
wasm-bindgen = { version = "0.2.62", default-features = false, optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(not(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown")))'.dependencies]
# +++ LIBRARY +++
# DNS over systems default DNS resolver
trust-dns-resolver = { version = "0.22", features = ["dns-over-rustls"] }
# TLS handshake
native-tls = "0.2"
# nice abstraction of URL
url = "2.2"
regex = "1.5"
crossterm = { version = "0.25" }
clap = { version = "~4.1", features = [
    "std",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
    "unicode",
    "wrap_help"
]}

